--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
    ========================================================================== */
 
 html {
-  color: #222;
+  color: #d21220;
   font-size: 3em;
   line-height: 1.4;
 }
