--- a/css/main.css
+++ b/css/main.css
@@ -263,3 +263,74 @@ textarea {
   }
 }
 
+p {
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  color: black;
+}
+
+h1 { 
+  font-family: 'Poppins', sans-serif;
+  font-size: 26px;
+  font-weight: 700;
+  color: black;
+}
+
+.modal {
+    display:none;
+    background-color:#ffffff;
+    width:100%;
+    height:100%;
+    position: fixed;
+    top:0;
+  }
+.modal__img {
+  width:50%;
+  height:100%;
+  position: fixed;
+  top:0;
+  left:0;
+  background-size: cover;
+}
+
+.modal__content {
+  position: fixed;
+  top:0;
+  left:60%;
+  top:20%;
+}
+
+.img_1 {background-image: url(../img/1.jpg);}
+.img_2 {background-image: url(../img/2.jpg);}
+.img_3 {background-image: url(../img/3.jpg);}
+.img_4 {background-image: url(../img/4.jpg);}
+.img_5 {background-image: url(../img/5.jpg);}
+.img_6 {background-image: url(../img/6.jpg);}
+.img_7 {background-image: url(../img/7.jpg);}
+.img_8 {background-image: url(../img/8.jpg);}
+.img_9 {background-image: url(../img/9.jpg);}
+.img_10 {background-image: url(../img/10.jpg);}
+.img_11 {background-image: url(../img/11.jpg);}
+.img_12 {background-image: url(../img/12.jpg);}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
