css the 13th img

--- a/css/main.css
+++ b/css/main.css
@@ -321,8 +321,7 @@ h1 {
 .img_10 {background-image: url(../img/10.jpg);}
 .img_11 {background-image: url(../img/11.jpg);}
 .img_12 {background-image: url(../img/12.jpg);}
-
-
+.img_13 {background-image: url(../img/13.jpg);}
 
 
 
